entered changes in section A

--- a/log.rmd
+++ b/log.rmd
@@ -680,25 +680,44 @@ or
 
 - revision letter
 
-I went through the three reports, making many of the changes suggested. Many of these were useful and I was happy to respond to them. 
+I went through the three reports, making many of the changes suggested. Many of these were useful and I was happy to respond to them. The main change is the overview and summary of the paper. A new paragraph towards the end of the introduction sets out the argument step by step, and the steps of the argument are also reiterated in the conclusion. 
 
 An overview of changes and discussion of suggestions I wasn't able to implement:
  - R1: 
-     -  For reasons of word count, I wasn't able to include a detailed discussion of the Tesco user interface. Given my focus on propensities and ordering of recommendations, I wasn't sure that was so relevant. Footnote 3 has a description of how handwritten lists and writing lists have been understood by anthropologists and literary theorists. 
-     - R1 asked for literature on adaptive ecommerce systems to be included, which is fine (I included the references), but I didn't discuss this very much. Grocery shopping, as I point in the introduction differs in important ways from many typical e-commerce settings. 
+     -  For reasons of word count, I wasn't able to include a detailed discussion of the Tesco user interface. Given my focus on probabilities, propensities and ordering of recommendations, I wasn't sure that was so relevant. Footnote 3 has a description of how handwritten lists and writing lists have been understood by anthropologists and literary theorists. 
+     - R1 asked for computer science and Web science literature on adaptive ecommerce systems to be included, which is fine as part of the context (I included several new references suggested by R1 in the introduction), but I didn't discuss this very much for two reasons. Grocery shopping, as I point in the introduction differs in important ways from many typical e-commerce settings.  Furthermore, because I was interested in the commercial operation of recommender systems, I wanted to focus on what was presented for discussion by the industry data scientist. Her presentation framed the sample of research literature I draw on. 
+     - I edited the graphic as suggested
+     - I modified the conclusion as suggested
  - R2: 
-    - to be honest, this was a difficult report to respond to. It occasioned me a lot of effort to deal with what seems a report coming from a very different starting point. I have tried, but it would require much more scaffolding to deal with them all. 
+    - to be honest, this was a difficult report to respond to. I could sympathise with the reviewers frustration, but I think the reviewer was approaching the manuscript from a quite different episteme. I have tried to respond constructively to their difficulties, but it would require much more scaffolding to deal with them all. 
     - R2 asked for 'specifics about how the analysis may translate to other personalization contexts, despite this being promised.' Although I did claim the case might be 'sociologically resonant,' I don't think I promised to translate to other personalization contexts. (Reading abstract, introduction and conclusion shows no sign of that promise.) It would be a significant new section of the paper to specify the general argument for other concrete contexts.  
     - R2 found the borrowing and repurposing of the term 'conversion event' from the recommender system literature confusing. I've added a footnote to explain the motivation for this borrowing, but I probably won't be able to convince R2 of the value of a material-semiotic approach in which such dual-register terms are quite common. 
-    - R2 was concerned about extremely confusing methodology. I've added a sentence or two in the methodology section saying what the paper does. But I won't, I fear, be able to assuage R2's concerns. They don't countenance what I'm trying to do: ground a theoretical argument by assembling some empirical engagements -- the ethnographic event, the small experiments with Tesco APIs and recommender system models, the existing sociologies and anthropologies of shopping and lists and the archaeology of recommendation. Its not a conventional empirical research project, and the methodology of reconstruction that I use (borrowing from Dewey) is unlikely to satisfy narrowly defined sociological requirements. Given the methodological pluralism of the journal, I'm hoping that this is ok. 
+    - R2 was concerned about extremely confusing methodology. I've added a sentence or two in the methodology section saying what the paper does. But I won't, I fear, be able to assuage R2's concerns. They don't countenance what I'm trying to do: ground a theoretical argument about changing modes of operational knowledge by assembling some empirical engagements -- the ethnographic event, the small experiments with Tesco APIs and recommender system models, the existing sociologies and anthropologies of shopping and lists and the archaeology of recommendation. Its not a conventional empirical research project, and the methodology of reconstruction that I use (borrowing from Dewey) does not conform to narrowly defined sociological requirements. Given the methodological pluralism of the journal, I'm hoping that this is viable. 
     - I've added a footnote with URL for the Github repository for the paper and its scripts. 
     - R2 wasn't able to see what the ethnographic material adds to analysis.  They could refer to p3, li 44-48 (in pre-revision manuscript) where I set out how I understand it is as part of a 'big data conversion event.'
-    - R2 couldn't work out the 'intended meaning' of some key sentences. There was a grammar problem in these sentences, which I've fixed.
+    - R2 couldn't work out the 'intended meaning' of some key sentences. There was a grammar problem in these sentences, which I've fixed. I'm hoping that this was the problem with those sentences not the actual content. 
+    - I've moved key part of footnote 5 into the introduction. That was a useful suggestion. 
+    - I've shortened the historical-archaeology of recommender system, and explained its purpose in the introductory overview. 
+    - The section on limitations of association rule systems has been re-framed in the introduction/overview, and I've added some sentences at the beginning of the section explaining why attention to limitations is relevant to the main argument about probabilities. 
+- R3:
+    - it was a relief to not have to do much in responding to this report. I was happy to expand the sentences about object-oriented research.  
 
 ## Mon 05 Feb 2018 08:07:19 GMT
 - responding to R2 today; 
-     - do I need a footnote on conversion event?
+- DONE: do I need a footnote on conversion event?
 
      paragraph setting out the structure of the paper: this should on page 2. Just after the Hansen section is re-inserted. 
 
-     The argument develops in four main steps. The first main section introduces the case study -- the Tesco online grocery  recommender system as presented at an industry/academic conference -- as an instance of a conversion event. The second section frames grocery shopping in terms of sociological and anthropological accounts of shopping lists and social order, highlighting how both the constitutional incompleteness of lists as inscriptive devices and the group-structured relationality of shopping overflow operational notions of personalization. The key elements of contemporary recommender systems are introduced by a brief archaeology of recommendation described in terms of a shift from 1980s census-based data-mining to web-based recommender system at the turn of the century. The following section is the main body of the paper and approaches recommendations in terms of the different kinds of probability calculations that both target persons and somewhat overflow them. This section of the paper extends Popper's propensity-based account of probability in its contemporary ramifications through predictive models, platform-scale data processing for large numbers of customers, the problems of grocery lists in their combinatorial potentials, and the supra-individual potentials of recommendations.
+     As it explores the big data conversion event, the argument unfolds in four main steps. The first main section introduces the case study -- the Tesco online grocery  recommender system as presented at an industry/academic conference -- as an instance of a conversion event. The second section frames grocery shopping in terms of sociological and anthropological accounts of shopping lists and social order, highlighting how both the constitutional incompleteness of lists as inscriptive devices and the group-structured relationality of shopping overflow operational notions of personalization. The key elements of contemporary recommender systems are introduced by a brief archaeology of recommendation described in terms of a shift from 1980s census-based data-mining to web-based recommender system at the turn of the century. The following section is the main body of the paper and approaches recommendations in terms of the different kinds of probability calculations that both target persons and somewhat overflow them. This section of the paper extends Popper's propensity-based account of probability. It attends to the different kinds of probabilities subjected to calculation, the shifts in modelling practices that include many more propensities,  the different operational conditions under which probability calculations take place, and the implications of lists and shopping for probability.    
+
+## Tue 06 Feb 2018 09:07:15 GMT
+- finished work on R2 problems 
+- TODO:  need to write a few sentences on the 'social argument' apropos Marres, Bogost, etc.  
+
+> Let's draw a distinction: unlike tools and art, philosophical carpentry _is built with philosophy in mind_: it may serve myriad other productive and aesthetic purposes, breaking with its origins and entering into dissemination like anything else, but it's first constructed as a theory, or an experiment, or a question -- one that can be operated. Carpentry is philosophical lab equipment. [@Bogost_2012,100]
+
+- TODO:  add overview to the conclusion
+- TODO:  revise abstract to reflect argument
+- added some more quotes on reconstruction to ~/notes/dewey_reconstruction_1957.md
+- read through editors requests -- think I've done most of them
+- entered changes up to Section B
