--- a/reconstruction.rmd
+++ b/reconstruction.rmd
@@ -30,15 +30,25 @@ opts_chunk$set(cache=TRUE)
 
 # A.  Introduction
 
-Big data practice often converts an existing state of affairs by adding a model or predictive elements based on the collection and analysis of data. This paper recounts the conversion of  an online grocery ordering system  from an older demographically-based recommendation system to a 'personal relevance' model. The main argument of the paper concerns how  personalization occurs in big data 'conversion events.' The term 'conversion event' has a dual sense. In recommender system design and web ecommerce, it refers to those occasions when a customer, user or site visitor clicks a specific hyperlink or purchases something. I also use it to refer to the common before-after narrative forms that proponents, developers and advocates of recommender systems adopt in describing, promoting, explaining or otherwise talking about big data, analytics or predictive modelling practices. In recent research and opinion on recommendations, personalization has been seen as the goal of predictive modelling.  Big data discourse in its promissory mode attributes potency to personalization: 'most important, using big data we hope to identify specific individuals rather than groups' [@Mayer-Schonberger_2013]. Conversely, current debates about the problems of big data emphasize the need to protect people from personalization.  Joseph Turow and co-authors conclude in their critical account of the transformation of retail space by business analytics: 'through it all, knowingly and not, and away from the spotlights of fierce social debate, retailers are encouraging daily routines that accept data-driven personalization as a centrifugal public' [@Turow_2015, 476]. Analysis of internet filter bubbles and the growth of predictive platforms in industry and government  [@Pariser_2011; @ONeil_2016a] also centre on personalization. In this paper, I agree that a transformation or conversion event is occurring, but one which also, even in the midst of much ongoing personalization,  opens the possibility of conceiving of social ordering processes afresh. Like Louise Amoore and Viola Piotukh's call for a new epistemology of population  [@Amoore_2015, 360], I will argue that contemporary recommender systems afford us the opportunity to re-conceptualise long-standing assumptions about social order and structure. The average everydayness and familiarity of the example here -- grocery shopping -- allows some first hand engagement with the messiness, the entanglements, and potentials of this conversion event in ways that other interesting settings -- social media for instance -- do not.
+Big data practice often converts an existing state of affairs by adding a model or predictive elements based on the extraction and analysis of data. This paper recounts the conversion of  an online grocery ordering system  from an older demographically-based recommendation system to a 'personal relevance' model. The main argument of the paper concerns how  personalization occurs in big data 'conversion events.' The term 'conversion event' has a dual sense. In recommender system design and web ecommerce, it refers to those occasions when a customer, user or site visitor clicks a specific hyperlink or purchases something that has been suggested to them. I also use it to refer to the common before-after narrative forms that proponents, developers and advocates of recommender systems adopt in describing, promoting, explaining or otherwise talking about big data, analytics or predictive modelling practices. The operational and narrative dimension of conversion events lie at the core of this paper. It may be that the two senses of the term -- the technical and the imaginary -- cannot be kept apart.
 
-'Data-driven personalization' relies on predictions, themselves dependent on data practices ranging across acquisition, storage, transformation, exchange, integration, modelling and experimentation [@Goy_2007].  The reconstruction of an online grocery shopping recommender system and its  personalized predictions that I undertake here centres on the notion of probability and its role in modelling and experimentation.  Although probabilistic calculations of events have  long-standing importance in many settings (insurance, medicine, experimental and field sciences, operations research, risk analysis, engineering design, public health,  economic modelling, etc.), probabilities have taken on an altered operational function in digital platforms.  They have become mundane part of the weave of infrastructures, transactions, and practices found in everyday life. In order to take the _operational_ reality of probabilities into account, we might understand probabilities in quasi-physicalist terms  defined by the philosopher of science Karl Popper as a 'world of propensities, as an unfolding process of realizing possibilities and of unfolding new possibilities' [@Popper_1990,19]. This operational-physicalist or sociotechnical notion of probability shifts our understanding of data analytics, especially in association with platforms [@Gillespie_2010], away from personalization. It  draws  on Popper's re-framing of probability as propensity to  engage with grocery recommendations in their worldly enactments. 
+In recent research and opinion on recommendations, personalization has been seen as the goal of predictive modelling [@ACM_2017].  Big data discourse in its promissory mode attributes potency to personalization: 'most important, using big data we hope to identify specific individuals rather than groups' [@Mayer-Schonberger_2013], even if personalization has a much longer history in commerce and e-commerce in particular [@Goy_2007;@Sarwar_2000]. Conversely, current debates about the problems of big data emphasize the need to protect people from personalization.  Joseph Turow and co-authors conclude in their critical account of the transformation of retail space by business analytics: 'through it all, knowingly and not, and away from the spotlights of fierce social debate, retailers are encouraging daily routines that accept data-driven personalization as a centrifugal public' [@Turow_2015, 476]. Analysis of internet filter bubbles and the growth of predictive platforms in industry and government  [@Pariser_2011; @ONeil_2016a] also centre on personalization.
 
-The account is empirical in several respects. It departs from an ethnographic moment: being a member of the audience at an industry/academic conference where a data scientist was describing how personalized recommendations were created for online grocery orders.  The paper  draws on anthropological and sociological research concerning shopping and list-making to situate the recommender system amongst the social ordering practices of shopping and lists. It makes use of archaeological approaches, in the sense developed by Michel Foucault [@Foucault_1972] to identify and map functional statements and practices configuring the knowledge and order generated by such systems over time. It conducts several small-scale code-based experiments in order to reconstruct, using widely available code resources resources such as APIs (Application Programming Interfaces) and software libraries for machine learning, some prototypical elements of the system in question.  Like some recent work in science and technology studies,  anthropology and media studies [@Marres_2017; @Marcus_2014; @Bogost_2012], the paper is  shaped by practical encounter with the 'object' -- code, data, web platforms --  it describes. At times, this mode of empirical philosophy may seem overly fixated on the technical minutiae of algorithms and recommender systems and inattentive to lived experience or practices. With some forbearance on the part of readers, however, the argument of the paper should resonate sociologically. It concerns the relationality of social life, or the consistency and regularity of relating and acting in a world where probabilities and calculations based on probabilities are widespread.
+In this paper, I confirm that a transformation or conversion event is occurring, but one which also, even in the midst of much ongoing personalization in the interests of platform capitalism's extraction of profits [@Srnicek_2016],  opens the possibility of conceiving of social ordering processes afresh. Like Louise Amoore and Viola Piotukh's call for a new epistemology of population  [@Amoore_2015, 360], I will argue that contemporary recommender systems afford us the opportunity to re-conceptualise long-standing assumptions about social order and structure. The average everydayness and familiarity of the example I discuss -- online grocery shopping -- allows some first hand engagement with the messiness, the entanglements, and potentials of the conversion event in ways that other interesting settings -- social media for instance -- do not.
+
+Contemporary 'data-driven personalization' relies on predictions, themselves dependent on data practices ranging across acquisition, storage, transformation, exchange, integration, modelling and experimentation. These are complex platform-scale systems, with many different elements.  I reconstruct certain predictive elements of an online grocery shopping recommender system associated with probabilities and their role in modelling and experimentation.  The reconstruction is a quasi-empirical philosophical undertaking aiming to construct an argument about transformations in probability rather than characterising the platform situation. Although probabilistic calculations of events have  long-standing importance in many settings (insurance, medicine, experimental and field sciences, operations research, risk analysis, engineering design, public health,  economic modelling, etc.), probabilities have taken on an altered operational function in digital platforms.  They have become mundane parts of the weave of infrastructures, transactions, and practices found in everyday life. In order to take the _operational_ reality of probabilities into account, I  understand probabilities in quasi-physicalist terms  defined by the philosopher of science Karl Popper as a 'world of propensities, as an unfolding process of realizing possibilities and of unfolding new possibilities' [@Popper_1990,19]. This operational-physicalist or sociotechnical notion of probability shifts our understanding of data analytics, especially in association with platforms [@Gillespie_2010], away from personalization. It  draws  on Popper's re-framing of probability as propensity to  engage with grocery recommendations in their worldly enactments. 
+
+The media theorist Mark Hansen has recently used Popper's account to argue  that 'predictive analytics are discoveries of micrological propensities that are not directly correlated with human understanding and affectivity and that do not by themselves cohere into clearly identifiable events' [@Hansen_2015a, 111-112]. Hansen links data to things via probabilities: 'whatever explanatory and causal value predictive analytics of large datasets have is, I suggest, ultimately rooted in this ontological transformation whereby probabilities are understood to be expressions of the actual propensity of things' [@Hansen_2015a, 120]. Hansen presents big data as an 'ontological transformation' that deploys probabilities in an evermore closely woven and encompassing expression of animated, eventful, propensities of things. Predictive analytics discovers probabilistic calculation  as operating on the propensities or the mutable associative agencies of things. The pragmatic and indeed empirical  question for me is whether such transformations or 'conversion' in relations between probabilities and 'the propensities of things'  can be detected and articulated in the prosaic setting of shopping lists and recommender systems.
+
+In exploring  big data conversion events, the argument concerning probabilities unfolds in four main steps. The first main section introduces the case study -- the Tesco online grocery  recommender system as presented at an industry/academic conference -- as an instance of the narrative of a conversion event. The second section frames grocery shopping in terms of sociological and anthropological accounts of shopping lists and social order, highlighting how both the constitutional incompleteness of lists as inscriptive devices and the group-structured relationality of shopping overflow operational notions of personalization. The defining predictive operations of contemporary recommender systems are introduced by a brief archaeology of recommendation described in terms of a shift from 1980s census-based data-mining to web-based recommender system at the turn of the century. The last section is the main body of the paper and approaches recommendations in terms of the different kinds of probability calculations that both target persons and somewhat overflow them. This section of the paper extends Popper's propensity-based account of probability. It attends to the different kinds of probabilities subjected to calculation, the shifts in modelling practices that include many more propensities,  the different operational conditions under which probability calculations take place, and the implications of lists and shopping for probability.    
+
+The reconstruction of the conversion event is empirical in several respects. Discussion departs from an ethnographic moment: being a member of the audience at an industry/academic conference where a data scientist was describing how personalized recommendations were created for online grocery orders.  I draw on existing anthropological and sociological research concerning shopping and list-making to situate the recommender system amongst the social ordering practices of shopping and lists. It makes use of archaeological approaches, in the sense developed by Michel Foucault [@Foucault_1972] to identify and map functional statements and practices configuring the knowledge and order generated by such systems over time. It conducts several small-scale code-based experiments in order to reconstruct, using widely available code resources resources such as APIs (Application Programming Interfaces) and software libraries for machine learning, some prototypical elements of the system in question.[^41.1]  Like some recent work in science and technology studies,  anthropology and media studies [@Marres_2017; @Marcus_2014; @Bogost_2012], the paper is  shaped by practical encounter with the 'object' -- code, data, web platforms --  it describes. Code experiments, as Ian Bogost writes, can 'act as a theory, or an experiment, or question -- one that can be operated' [@Bogost_2012, 100]. The motivation is both phenomenological -- to re-activate the sense of relationality at work in the model  -- philosophically reconstructive -- to ground an encounter with the troublesome power of recommendation through what John Dewey terms 'specific inquiries into specific structures' [@Dewey_1957, 199].  At times, this mode of empirical philosophy may seem overly fixated on the technical minutiae of algorithms and recommender systems and inattentive to lived experience or practices. With some forbearance on the part of readers, however, the argument of the paper should resonate sociologically: it concerns the relationality of social life, or the consistency and regularity of relating and acting in a world where probabilities and calculations based on probabilities are widespread.
+
+[^41.1]: Scripts, code and sample datasets used in the paper can be found at https://github.com/rian39/lists
 
 # B. The conversion from demographic to personalized recommendation
 
-At one of the many industry-meets-academia events occurring in data science-oriented higher education institutions in the UK, speakers from industry, government and commerce described their work with predictive models.[^11.1] Their narrative often followed the 'before-Big Data and after-Big data' conversion form.  Shreena Patel, a PhD graduate in statistics and operations research,  works as a data scientist for DunnHumby, a well-known [customer science company ](https://www.dunnhumby.com/) [@dunnhumby_2017].  Her work at DunnHumby focuses on online grocery shopping at the supermarket chain Tesco.  Speaking to an audience of statisticians and operations researchers, Patel focused on the development and operation of predictive models underlying  shopping list recommendations. The presentation was filled with graphs, numbers, and tables concerning ongoing development of the 'Have you forgotten?' recommender system.
+At one of the many industry-meets-academia events occurring in data science-oriented higher education institutions in the UK, speakers from industry, government and commerce described their work with predictive models.[^11.1] Their narratives often followed the 'before-Big Data and after-Big data' conversion form.  Shreena Patel, a PhD in statistics and operations research,  works as a data scientist for DunnHumby, a well-known [customer science company ](https://www.dunnhumby.com/) [@dunnhumby_2017].  Her work at DunnHumby focuses on online grocery shopping at the supermarket chain Tesco.  Speaking to an audience of statisticians and operations researchers, Patel focused on the development and operation of predictive models underlying  shopping list recommendations. The presentation was filled with graphs, numbers, and tables concerning ongoing development of the 'Have you forgotten?' recommender system.
 
 [^11.1]: More than 100  Data Science Institutes have been set up in North America, Europe and UK since around 2012. The traffic between higher education and data analytics in industry is intense and flows in several forms: people funding, research findings, software and technical devices (code) and training.
 
@@ -84,9 +94,8 @@ Writing just after the advent of web-based e-Commerce, Resnick and Varian  imagi
 
 Given personalized recommendations stretch back two decades, what in  the newly implemented  recommender system changes?  The components of the new recommender system -- predictive models and their parameters, infrastructural provisioning to run the models, product similarity matrices --  address the challenges of personally-relevant recommendations -- too many products, changes over time, unstable propensities of things in their associations with people. The 'personal relevance model' and personalization more generally have a troubled relation to a social order because it is, as grocery shopping attests, intrinsically social. The model will need to render grocery shopping calculable in a way that somehow includes the associated social ordering and negotiation. The model, like many big data practices, predicates probabilities as a way to render the situation calculable.
 
-From the standpoint of probability, recommendations are conditional probabilities or probabilities whose calculation takes into the account the occurrence of other events. But what is a probability today? In exploring Patel's account of the recommender system, my focus probabilities seeks to re-frame the operation of the recommender system in a way freed from lingering incompatibilities between calculation and social life [@Dewey_1957, 26]. In order to re-frame probability, I draw directly on the work of Karl Popper. In an essay written towards the end of his career, Popper presents a non-standard account of probabilities as real processes. He argues that probabilities have a physical reality equivalent to forces and fields [@Popper_1990]. Against standard interpretations,  Popper does not identify probabilities with either degree of belief (likelihood) or frequency of events. Instead he suggests 'they should be regarded as _inherent in a situation_ ' [@Popper_1990, 14].  In his account, probabilities are tendencies towards realization inherent in a situation. Probabilities have or indeed are _propensities_, tendencies to realize the event (11). While Popper's concept  of probability as propensity might seem remote from the concerns of online grocery shopping, it applies quite well to Patel's presentation of the personal relevance model and the ways in which it seeks to calculate probabilities of purchase. The reconstructions of the model I am about to discuss will explore the implications of this alternative account of probability for regular narratives of personalization.[^65.1]
+From the standpoint of probability, recommendations are conditional probabilities or probabilities whose calculation takes into the account the occurrence of other events. But what is a probability today? In exploring Patel's account of the recommender system, my focus probabilities seeks to re-frame the operation of the recommender system in a way freed from lingering incompatibilities between calculation and social life [@Dewey_1957, 26]. In order to re-frame probability, I draw directly on the work of Karl Popper. In an essay written towards the end of his career, Popper presents a non-standard account of probabilities as real processes. He argues that probabilities have a physical reality equivalent to forces and fields [@Popper_1990]. Against standard interpretations,  Popper does not identify probabilities with either degree of belief (likelihood) or frequency of events. Instead he suggests 'they should be regarded as _inherent in a situation_ ' [@Popper_1990, 14].  In his account, probabilities are tendencies towards realization inherent in a situation. Probabilities have or indeed are _propensities_, tendencies to realize the event (11). While Popper's concept  of probability as propensity might seem remote from the concerns of online grocery shopping, it applies quite well to Patel's presentation of the personal relevance model and the ways in which it seeks to calculate probabilities of purchase. The reconstructions of the model I am about to discuss will explore the implications of this alternative account of probability for regular narratives of personalization.
 
-[^65.1]: The media theorist Mark Hansen has recently applied Popper's account to argue  that 'predictive analytics are discoveries of micrological propensities that are not directly correlated with human understanding and affectivity and that do not by themselves cohere into clearly identifiable events' [@Hansen_2015a, 111-112]. Hansen's account differs from many widely shared views of big data. In the face of the so much personalization (and Patel's presentation exemplifies this), Hansen attributes a somewhat impersonalizing force to big data.  If  much predictive practice attempts to elicit 'micrological propensities' from data, Hansen links data to things via probabilities: 'whatever explanatory and causal value predictive analytics of large datasets have is, I suggest, ultimately rooted in this ontological transformation whereby probabilities are understood to be expressions of the actual propensity of things' [@Hansen_2015a, 120]. Hansen theorises big data or predictive analytics as an 'ontological transformation' that deploys probabilities in an evermore closely woven and encompassing expression of animated, eventful, propensities of things. Predictive analytics links probabilities as calculations to propensities or the mutable associative agencies of things. The practical and indeed empirical  question is whether such transformations or 'conversion' in relations between probabilities and 'the propensities of things'  can be detected and articulated in the prosaic setting of shopping lists and recommender systems. 'Conversion' is a preferable term for these changes. Not much hinges on the choice of terms, but 'conversion' happens to be the term used by Patel.  It highlights  re-orientations in subjects, experience, things, numbers and infrastructures that ranges more widely and are more grounded than Hansen's 'ontological transformation' formulation.
 
 ## `Apriori` conditional probabilities
 
